refactor: 优化对象池逻辑